// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse complex grammar (num+num) 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <(>(</(>
|  |  |  |  <Expr>
|  |  |  |  |  <Term>
|  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  </Factor>
|  |  |  |  |  |  <Term>
|  |  |  |  |  |  </Term>
|  |  |  |  |  </Term>
|  |  |  |  |  <Expr>
|  |  |  |  |  |  <+>+</+>
|  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  </Term>
|  |  |  |  |  |  <Expr>
|  |  |  |  |  |  </Expr>
|  |  |  |  |  </Expr>
|  |  |  |  </Expr>
|  |  |  |  <)>)</)>
|  |  |  </Factor>
|  |  |  <Term>
|  |  |  </Term>
|  |  </Term>
|  |  <Expr>
|  |  </Expr>
|  </Expr>
</Root>
"
`;

exports[`parse complex grammar num+num 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <num>num</num>
|  |  |  </Factor>
|  |  |  <Term>
|  |  |  </Term>
|  |  </Term>
|  |  <Expr>
|  |  |  <+>+</+>
|  |  |  <Term>
|  |  |  |  <Factor>
|  |  |  |  |  <num>num</num>
|  |  |  |  </Factor>
|  |  |  |  <Term>
|  |  |  |  </Term>
|  |  |  </Term>
|  |  |  <Expr>
|  |  |  </Expr>
|  |  </Expr>
|  </Expr>
</Root>
"
`;

exports[`parse complex grammar num+num+(num-num) 1`] = `
"
<Root>
|  <Expr>
|  |  <Term>
|  |  |  <Factor>
|  |  |  |  <num>num</num>
|  |  |  </Factor>
|  |  |  <Term>
|  |  |  </Term>
|  |  </Term>
|  |  <Expr>
|  |  |  <+>+</+>
|  |  |  <Term>
|  |  |  |  <Factor>
|  |  |  |  |  <num>num</num>
|  |  |  |  </Factor>
|  |  |  |  <Term>
|  |  |  |  </Term>
|  |  |  </Term>
|  |  |  <Expr>
|  |  |  |  <+>+</+>
|  |  |  |  <Term>
|  |  |  |  |  <Factor>
|  |  |  |  |  |  <(>(</(>
|  |  |  |  |  |  <Expr>
|  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  <Expr>
|  |  |  |  |  |  |  |  <->-</->
|  |  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  |  <Factor>
|  |  |  |  |  |  |  |  |  |  <num>num</num>
|  |  |  |  |  |  |  |  |  </Factor>
|  |  |  |  |  |  |  |  |  <Term>
|  |  |  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  |  </Term>
|  |  |  |  |  |  |  |  <Expr>
|  |  |  |  |  |  |  |  </Expr>
|  |  |  |  |  |  |  </Expr>
|  |  |  |  |  |  </Expr>
|  |  |  |  |  |  <)>)</)>
|  |  |  |  |  </Factor>
|  |  |  |  |  <Term>
|  |  |  |  |  </Term>
|  |  |  |  </Term>
|  |  |  |  <Expr>
|  |  |  |  </Expr>
|  |  |  </Expr>
|  |  </Expr>
|  </Expr>
</Root>
"
`;
